fixes alignment in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8828,7 +8828,7 @@ select.list-dt:focus {
     padding: 2rem 0;
   }
 
-  .msomoderate_box.step1 {
+  .msomoderate_box.step1 label {
     transform: translateX(10px);
   }
 }
